tests/macros/select/filter.rs
fn main() {
    let q = discourse::questions![Select { filter: todo!() }];
}
